# Ghost_Warriors

./: README.md  main.py  pyproject.toml
.github/workflows/: main.yml
Project4/: Analysis.ipynb  cleaning.ipynb
Project5/: README.md  pyproject.toml
Project5/project5/: .gitignore  app.py  config.py  create_table.sql  insert_values.sql
Project5_II/: pyproject.toml  python_sql.py
Project5_II/project_5/: python_sql.py
sql_alchemy_project8/: pyproject.toml
sql_alchemy_project8/.github/workflow/: main.yml
sql_alchemy_project8/project8/: .gitignore  conftest.py  pyproject.toml  sqlalchemy_proj8.py  test_sqlalchemy_proj8.py
sql_alchemy_project8/project8/project8/: .env  .gitignore  Artists.csv  conftest.py  sqlalchemy_proj8.py  test_sqlalchemy_proj8.py
