[tool.poetry]
name = "gspreaddependency"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
gspread = "^5.12.0"
python-dotenv = "^1.0.0"
logging = "^0.4.9.6"
requests = "^2.31.0"
datetime = "^5.2"
jsonschema = "^4.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
